# microscope

./: db.sqlite3  manage.py  pyproject.toml
custom_user/: admin.py  forms.py  models.py  urls.py  views.py
custom_user/migrations/: 0001_initial.py  0002_customuser_display_name.py
microscope_config/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html
templates/registration/: login.html  signup.html
